checking words, added missing verse, putting breaks to verse 10

--- a/chalisa6.html
+++ b/chalisa6.html
@@ -246,7 +246,7 @@
             fullTranslation: "Cleansing the mirror of my mind with the dust of the Guru's lotus feet, I describe the pure glory of Lord Rama, which bestows the four fruits of life.",
             words: [
                 { text: "श्रीगुरु", transliteration: "Śrīguru", translation: "Respected Guru", hindi: "आदरणीय गुरु", etym: "Sanskrit: Sri (Radiance) + Guru (Teacher).", note: "The remover of darkness." },
-                { text: "चरन", transliteration: "charana", translation: "Feet", hindi: "चरण", etym: "Skt: Charana.", note: "Symbol of humility." },
+                { text: "चरण", transliteration: "charana", translation: "Feet", hindi: "चरण", etym: "Skt: Charana.", note: "Symbol of humility." },
                 { text: "सरोज", transliteration: "saroja", translation: "Lotus", hindi: "कमल", etym: "Skt: Saras (Lake) + Ja (Born).", note: "Symbol of purity." },
                 { text: "रज", transliteration: "raja", translation: "Dust", hindi: "धूल", etym: "Skt: Rajas.", note: "Sacred dust/blessings." },
                 { text: "<br>", transliteration: "<br>"},
@@ -285,12 +285,13 @@
                 { text: "|", transliteration: "|"},
                 { text: "<br>", transliteration: "<br>"},
                 { text: "बल", transliteration: "bala", translation: "Strength", hindi: "शक्ति", etym: "Skt: Bala.", note: "Physical/Spiritual power." },
+                { text: "बुद्धि", transliteration: "buddhi", translation: "Intelligence", hindi: "बुद्धि / विवेक", etym: "Skt: Budh (To know/awaken).", note: "The faculty of discrimination and wisdom." },
                 { text: "विद्या", transliteration: "vidyā", translation: "Knowledge", hindi: "ज्ञान", etym: "Skt: Vid (To know).", note: "Spiritual wisdom." },
                 { text: "देहु", transliteration: "dehu", translation: "Give", hindi: "दीजिये", etym: "Imperative form.", note: "A plea." },
-                { text: "मोहि", transliteration: "mohi", translation: "Me", hindi: "मुझे", etym: "Regional form.", note: "The devotee." },
+                { text: "मोहिं", transliteration: "mohi", translation: "Me", hindi: "मुझे", etym: "Regional form.", note: "The devotee." },
                 { text: "<br>", transliteration: "<br>"},
                 { text: "हरहु", transliteration: "harahu", translation: "Remove/Steal", hindi: "हर लीजिये", etym: "Skt: Hri (To take away).", note: "Take away my pain." },
-                { text: "कलेस", transliteration: "kalesa", translation: "Suffering", hindi: "क्लेश/कष्ट", etym: "Skt: Klesha.", note: "Afflictions of life." },
+                { text: "कलेश", transliteration: "kalesa", translation: "Suffering", hindi: "क्लेश/कष्ट", etym: "Skt: Klesha.", note: "Afflictions of life." },
                 { text: "बिकार", transliteration: "bikāra", translation: "Impurities", hindi: "दोष", etym: "Skt: Vikara.", note: "Lust, anger, greed, etc." },
                 { text: "||", transliteration: "||"},
             ]
@@ -304,8 +305,11 @@
                 { text: "जय", transliteration: "Jaya", translation: "Victory", hindi: "विजय", etym: "Skt: Ji (Conquer).", note: "A shout of triumph." },
                 { text: "हनुमान", transliteration: "Hanumāna", translation: "Hanuman", hindi: "हनुमान", etym: "Hanu (Jaw) + Man (Possessing).", note: "One with a prominent jaw." },
                 { text: "ज्ञान", transliteration: "gyāna", translation: "Knowledge", hindi: "ज्ञान", etym: "Skt: Jnana.", note: "Divine wisdom." },
-                { text: "गुन", transliteration: "guna", translation: "Virtues", hindi: "गुण", etym: "Skt: Guna.", note: "Qualities/Talents." },
+                { text: "गुण", transliteration: "guna", translation: "Virtues", hindi: "गुण", etym: "Skt: Guna.", note: "Qualities/Talents." },
                 { text: "सागर", transliteration: "sāgara", translation: "Ocean", hindi: "सागर", etym: "Skt: Sagara.", note: "Infinite depth." },
+                { text: "|", transliteration: "|"},
+                { text: "<br>", transliteration: "<br>"},
+                { text: "जय", transliteration: "Jaya", translation: "Victory", hindi: "विजय", etym: "Skt: Ji (Conquer).", note: "A shout of triumph." },
                 { text: "कपीस", transliteration: "kapīsa", translation: "Lord of Monkeys", hindi: "वानर राज", etym: "Kapi (Monkey) + Isa (Lord).", note: "King Sugriva or Hanuman." },
                 { text: "तिहुँ", transliteration: "tihū", translation: "Three", hindi: "तीनों", etym: "Skt: Tri.", note: "Heaven, Earth, Underworld." },
                 { text: "लोक", transliteration: "loka", translation: "Worlds", hindi: "लोक", etym: "Skt: Loka.", note: "Realms of existence." },
@@ -323,7 +327,9 @@
                 { text: "अतुलित", transliteration: "atulita", translation: "Immeasurable", hindi: "जिसकी तुलना न हो सके", etym: "A (Not) + Tula (Scale/Weight).", note: "Beyond comparison." },
                 { text: "बल", transliteration: "bala", translation: "Strength", hindi: "शक्ति", etym: "Skt: Bala.", note: "Physical and spiritual might." },
                 { text: "धामा", transliteration: "dhāmā", translation: "Abode/Home", hindi: "धाम / घर", etym: "Skt: Dhaman.", note: "A vessel or repository." },
-                { text: "अंजनि", transliteration: "Anjani", translation: "Anjani", hindi: "माता अंजनी", etym: "Proper Noun.", note: "Hanuman's mother." },
+                { text: "|", transliteration: "|"},
+                { text: "<br>", transliteration: "<br>"},
+                { text: "अञ्जनि", transliteration: "Anjani", translation: "Anjani", hindi: "माता अंजनी", etym: "Proper Noun.", note: "Hanuman's mother." },
                 { text: "पुत्र", transliteration: "putra", translation: "Son", hindi: "पुत्र", etym: "Skt: Putra.", note: "Male offspring." },
                 { text: "पवनसुत", transliteration: "pavanasuta", translation: "Son of Wind", hindi: "पवन पुत्र", etym: "Pavana (Wind) + Suta (Son).", note: "Spiritually born of the Wind God (Vayu)." },
                 { text: "नामा", transliteration: "nāmā", translation: "Named", hindi: "नाम", etym: "Skt: Naman.", note: "Known by this name." }
@@ -338,6 +344,8 @@
                 { text: "महाबीर", transliteration: "Mahābīra", translation: "Great Hero", hindi: "महान वीर", etym: "Maha (Great) + Vira (Hero).", note: "One of the most popular names of Hanuman." },
                 { text: "बिक्रम", transliteration: "bikrama", translation: "Valour", hindi: "पराक्रम", etym: "Skt: Vikrama (Stride/Prowess).", note: "Referring to his immense courage." },
                 { text: "बजरंगी", transliteration: "bajarangī", translation: "Thunderbolt Body", hindi: "वज्र के समान अंगों वाले", etym: "Vajra (Thunderbolt/Diamond) + Anga (Body).", note: "Often mispronounced as 'Orange-colored'. It actually means his body is as hard as Indra's weapon." },
+                { text: "|", transliteration: "|"},
+                { text: "<br>", transliteration: "<br>"},
                 { text: "कुमति", transliteration: "kumati", translation: "Bad Intellect", hindi: "कुबुद्धि", etym: "Ku (Bad) + Mati (Mind).", note: "Negative thoughts, ignorance." },
                 { text: "निवार", transliteration: "nivāra", translation: "Remover", hindi: "निवारण करने वाले", etym: "Skt: Nivari (To ward off).", note: "He who dispels darkness." },
                 { text: "सुमति", transliteration: "sumati", translation: "Good Intellect", hindi: "सुबुद्धि", etym: "Su (Good) + Mati (Mind).", note: "Wisdom and righteous thinking." },
@@ -355,12 +363,15 @@
                 { text: "बरन", transliteration: "barana", translation: "Color/Complexion", hindi: "वर्ण / रंग", etym: "Skt: Varna.", note: "Hue or class." },
                 { text: "बिराज", transliteration: "birāja", translation: "Resplendent", hindi: "विराजमान", etym: "Vi (Intensive) + Raj (Shine).", note: "Shining forth." },
                 { text: "सुबेसा", transliteration: "subesā", translation: "Good Dress", hindi: "सुंदर वेश", etym: "Su (Good) + Vesha (Attire).", note: "Beautifully adorned." },
+                { text: "|", transliteration: "|"},
+                { text: "<br>", transliteration: "<br>"},
                 { text: "कानन", transliteration: "kānana", translation: "In Ears", hindi: "कानों में", etym: "Skt: Karna.", note: "Locative case." },
-                { text: "कुंडल", transliteration: "kundala", translation: "Earrings", hindi: "कुंडल", etym: "Skt: Kundala (Coil/Ring).", note: "Large hoop earrings worn by warriors/yogis." },
+                { text: "कुण्डल", transliteration: "kundala", translation: "Earrings", hindi: "कुंडल", etym: "Skt: Kundala (Coil/Ring).", note: "Large hoop earrings worn by warriors/yogis." },
                 { text: "कुंचित", transliteration: "kunchita", translation: "Curly", hindi: "घुंघराले", etym: "Skt: Kunch (To curve).", note: "Curled locks of hair." },
                 { text: "केसा", transliteration: "kesā", translation: "Hair", hindi: "बाल", etym: "Skt: Kesha.", note: "His mane/hair." }
             ]
         },
+        
         {
             type: "Chaupai",
             verseIndex: 5,
@@ -372,22 +383,46 @@
                 { text: "औ", transliteration: "au", translation: "And", hindi: "और", etym: "Short for Aur.", note: "Conjunction." },
                 { text: "ध्वजा", transliteration: "dhvajā", translation: "Flag", hindi: "ध्वज / झंडा", etym: "Skt: Dhvaja.", note: "Victory flag or religious standard." },
                 { text: "बिराजै", transliteration: "birājai", translation: "Sits/Adorns", hindi: "विराजमान है", etym: "Skt: Viraj.", note: "Is present majestically." },
+                { text: "|", transliteration: "|"},
+                { text: "<br>", transliteration: "<br>"},
                 { text: "कांधे", transliteration: "kāndhe", translation: "Shoulder", hindi: "कंधे पर", etym: "Skt: Skandha.", note: "On the shoulder." },
                 { text: "मूँज", transliteration: "mūnja", translation: "Munja Grass", hindi: "मूँज घास", etym: "Saccharum munja.", note: "A sacred grass used for the girdle of a Brahmin student." },
                 { text: "जनेऊ", transliteration: "janeū", translation: "Sacred Thread", hindi: "यज्ञोपवीत", etym: "Skt: Yajnopavita.", note: "The thread ceremony mark; shows he is a learned Brahmachari." },
                 { text: "साजै", transliteration: "sājai", translation: "Beautifies", hindi: "शोभा देता है", etym: "Skt: Sajja (Prepared/Decorated).", note: "Looks beautiful." }
             ]
         },
+
         {
         type: "Chaupai",
         verseIndex: 6,
+        fullTransliteration: "Śankara suvana keśarī nandana | Teja pratāpa mahā jaga bandana ||",
+        fullTranslation: "Incarnation of Shankar (Shiva), son of Kesari, whose glory is worshipped by the whole world.",
+        words: [
+            { text: "शंकर", transliteration: "Śankara", translation: "Shiva", hindi: "भगवान शिव", etym: "Sam (Prosperity) + Kara (Doer).", note: "Hanuman is considered the 11th Rudra avatar of Shiva." },
+            { text: "सुवन", transliteration: "suvana", translation: "Son/Incarnation", hindi: "पुत्र / अवतार", etym: "Skt: Suvana.", note: "Offspring or manifestation." },
+            { text: "केसरी", transliteration: "keśarī", translation: "Kesari", hindi: "केसरी", etym: "Proper Noun.", note: "Hanuman's earthly father, the Monkey King." },
+            { text: "नंदन", transliteration: "nandana", translation: "Son/Joy", hindi: "पुत्र / आनंद", etym: "Nand (Joy).", note: "Son who brings delight." },
+            { text: "तेज", transliteration: "teja", translation: "Radiance/Glory", hindi: "तेज / आभा", etym: "Skt: Tejas.", note: "Spiritual and physical splendor." },
+            { text: "प्रताप", transliteration: "pratāpa", translation: "Majesty/Valor", hindi: "प्रताप / वीरता", etym: "Pra + Tapa (Heat).", note: "Power and influence." },
+            { text: "महा", transliteration: "mahā", translation: "Great", hindi: "महान", etym: "Skt: Maha.", note: "-" },
+            { text: "जग", transliteration: "jaga", translation: "World", hindi: "जगत / संसार", etym: "Jagat.", note: "-" },
+            { text: "बंदन", transliteration: "bandana", translation: "Worshipped", hindi: "वंदनीय", etym: "Vandana (Worship).", note: "Revered by the entire universe." }
+        ]
+    },
+    // inserted, check others
+
+        {
+        type: "Chaupai",
+        verseIndex: 7,
         fullTransliteration: "Vidyāvāna gunī ati chātur | Rāma kāja karibe ko ātur ||",
         fullTranslation: "Full of knowledge, virtuous and very clever, always eager to do Rama's work.",
         words: [
             { text: "विद्यावान", transliteration: "Vidyāvāna", translation: "Learned", hindi: "ज्ञानी", etym: "Vidya (Knowledge) + Van (Possessor).", note: "Master of the Vedas and scriptures." },
-            { text: "गुनी", transliteration: "gunī", translation: "Virtuous", hindi: "गुणवान", etym: "Skt: Gunin.", note: "Possessing all divine qualities." },
+            { text: "गुणी", transliteration: "gunī", translation: "Virtuous", hindi: "गुणवान", etym: "Skt: Gunin.", note: "Possessing all divine qualities." },
             { text: "अति", transliteration: "ati", translation: "Very/Extremely", hindi: "अत्यंत", etym: "Prefix 'Ati'.", note: "Modifier indicating intensity." },
             { text: "चातुर", transliteration: "chātur", translation: "Clever/Skillful", hindi: "चतुर", etym: "Skt: Chatura.", note: "Skillful in execution of tasks." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "राम", transliteration: "Rāma", translation: "Rama", hindi: "राम", etym: "Proper Noun.", note: "The Lord." },
             { text: "काज", transliteration: "kāja", translation: "Work/Task", hindi: "कार्य", etym: "Derived from Skt 'Karya'.", note: "Divine mission." },
             { text: "करिबे", transliteration: "karibe", translation: "To do", hindi: "करने के लिए", etym: "Braj Bhasha verb form.", note: "Purpose." },
@@ -397,7 +432,7 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 7,
+        verseIndex: 8,
         fullTransliteration: "Prabhu charitra sunibe ko rasiyā | Rāma lakhana sītā mana basiyā ||",
         fullTranslation: "Delighting in listening to the Lord's deeds, Rama, Lakshmana, and Sita dwell in your heart.",
         words: [
@@ -406,6 +441,8 @@
             { text: "सुनिबे", transliteration: "sunibe", translation: "To listen", hindi: "सुनने को", etym: "Braj Bhasha form.", note: "The act of hearing (Shravanam)." },
             { text: "को", transliteration: "ko", translation: "For", hindi: "के लिए", etym: "-", note: "-" },
             { text: "रसिया", transliteration: "rasiyā", translation: "Connoisseur", hindi: "आनंद लेने वाला", etym: "Rasa (Essence/Juice) + Iya.", note: "One who savors the sweetness of devotion." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "राम", transliteration: "Rāma", translation: "Rama", hindi: "राम", etym: "-", note: "-" },
             { text: "लखन", transliteration: "lakhana", translation: "Lakshmana", hindi: "लक्ष्मण", etym: "Derived from Lakshmana.", note: "Rama's brother." },
             { text: "सीता", transliteration: "sītā", translation: "Sita", hindi: "सीता", etym: "Furrow (Earth born).", note: "Rama's consort." },
@@ -415,15 +452,17 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 8,
+        verseIndex: 9,
         fullTransliteration: "Sūkshma rūpa dhari siyahi dikhāvā | Bikata rūpa dhari lanka jarāvā ||",
         fullTranslation: "Assuming a subtle form you appeared to Sita, and in a terrifying form you burnt Lanka.",
         words: [
             { text: "सूक्ष्म", transliteration: "Sūkshma", translation: "Subtle/Tiny", hindi: "छोटा / सूक्ष्म", etym: "Skt: Sukshma.", note: "He shrank his size to avoid detection in Ashok Vatika." },
             { text: "रूप", transliteration: "rūpa", translation: "Form", hindi: "रूप", etym: "Skt: Rupa.", note: "Appearance." },
             { text: "धरि", transliteration: "dhari", translation: "Assuming", hindi: "धारण करके", etym: "Skt: Dhri (To hold).", note: "Taking on." },
-            { text: "सियहि", transliteration: "siyahi", translation: "To Sita", hindi: "सीता जी को", etym: "-", note: "Direct object." },
+            { text: "सियहिं", transliteration: "siyahi", translation: "To Sita", hindi: "सीता जी को", etym: "-", note: "Direct object." },
             { text: "दिखावा", transliteration: "dikhāvā", translation: "Showed", hindi: "दिखाया", etym: "Dri (To see).", note: "Revealed himself." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "बिकट", transliteration: "Bikata", translation: "Terrifying", hindi: "विकराल", etym: "Skt: Vikata (Formidable).", note: "Fearful form taken to intimidate demons." },
             { text: "रूप", transliteration: "rūpa", translation: "Form", hindi: "रूप", etym: "-", note: "-" },
             { text: "धरि", transliteration: "dhari", translation: "Holding", hindi: "धारण कर", etym: "-", note: "-" },
@@ -433,7 +472,7 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 9,
+        verseIndex: 10,
         fullTransliteration: "Bhīma rūpa dhari asura samhāre | Rāmachandra ke kāja samvāre ||",
         fullTranslation: "Assuming a colossal form you destroyed the demons, and fulfilled the tasks of Ramachandra.",
         words: [
@@ -442,12 +481,17 @@
             { text: "धरि", transliteration: "dhari", translation: "Assuming", hindi: "धारण करके", etym: "-", note: "-" },
             { text: "असुर", transliteration: "asura", translation: "Demons", hindi: "राक्षस", etym: "A-Sura (Not divine).", note: "Evil forces." },
             { text: "सँहारे", transliteration: "samhāre", translation: "Destroyed", hindi: "संहार किया", etym: "Skt: Samhara (Destruction).", note: "Killed in battle." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "रामचंद्र", transliteration: "Rāmachandra", translation: "Ramachandra", hindi: "श्री राम", etym: "Rama + Chandra (Moon).", note: "Rama, who is pleasing like the moon." },
             { text: "के", transliteration: "ke", translation: "Of", hindi: "के", etym: "-", note: "-" },
             { text: "काज", transliteration: "kāja", translation: "Tasks", hindi: "काम", etym: "-", note: "Mission." },
             { text: "सँवारे", transliteration: "samvāre", translation: "Accomplished", hindi: "सफल किये / सुधारे", etym: "Sam (Complete) + Vri (Cover/Arranged).", note: "Successfully completed." }
         ]
     },
+
+    // checked to here, next should be 11
+
     {
         type: "Chaupai",
         verseIndex: 10,
